Add roborumble task